--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="board">
-            <div class="boxes"></div>
+        <div id="board" class="grid-container">
+
         </div>
 
 
         
-        <button id="reset">Reset</button>
+        <button id="reset" onclick=resetGrid()>Reset</button>
         <span id="result"></span>
         <script src="index.js"></script>
     </body>
